[package]
name = "rlox-jasm"
version = "0.1.0"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>", "Yusuf Ender Osmanoğlu <yusufenderosmanoglu@gmail.com>"]
edition = "2021"
description = "JASM IL and JASM Bytecode generating lox compiler written in rust. Forket from Emivvvvv/rlox"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ysufender/rlox-jasm"

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
rustc-hash = "2.0.0"
